# Projects

./: README.md
F1connect/: .gitignore  README.md  pyproject.toml
F1connect/app/: .gitignore  package-lock.json  package.json
F1connect/app/.openai/: hosting.json
F1connect/app/app/: globals.css  layout.tsx  page.tsx
F1connect/app/app/data/: graph-v2026.10.0-modern.json
F1connect/app/tests/: rendered-html.test.mjs  runtime-graph.test.mjs
F1connect/data/curated/: regressions.json
F1connect/data/sources/: f1db-v2026.10.0.json
F1connect/docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  GAME_DESIGN.md  PROJECT_OUTLINE.md  ROADMAP.md  VISUAL_AUDIO.md
F1connect/pipeline/: __init__.py
F1connect/pipeline/paddock_links/: __init__.py  audit.py  cli.py  f1db.py  graph.py  model.py
F1connect/tests/: test_audit.py  test_graph.py
