[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paddock-links-data"
version = "0.1.0"
description = "Evidence-backed Formula 1 teammate graph pipeline"
requires-python = ">=3.11"

[project.scripts]
paddock-links = "pipeline.paddock_links.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]

